# webnote-backend

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt  vcpkg.cmake  vcpkg.json  webnote_db.sql
include/: db.h  error.h  note.h  user.h
src/: db.cpp  error.cpp  main.cpp
